--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "firebase": "^11.9.1",
     "lucide-react": "^0.475.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
